# chirp

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benches/: protocol.rs
benchmarks/: README.md  run_all.sh
benchmarks/loopback/: methodology.md
benchmarks/microbench/: methodology.md
benchmarks/netem/: bench_inside.sh  run_netem.sh
benchmarks/simulation/: methodology.md
scripts/: netem_suite.sh
src/: lib.rs
src/congestion/: delay_based.rs  mod.rs
src/protocol/: fec.rs  gf.rs  mod.rs  nack.rs  packet.rs  rlnc.rs
src/transfer/: mod.rs  receiver.rs  sender.rs  tcp_receiver.rs  tcp_sender.rs
tests/: loopback.rs
